update: fix template z-index

--- a/src/assets/sass/alpha/header.scss
+++ b/src/assets/sass/alpha/header.scss
@@ -9,6 +9,7 @@ header {
     transition: .5s;
     width: 100%;
     position: fixed;
+    z-index: 99;
     @include box-shadow(0 0 20px 8px #d8d8d8);
 }
 
