--- a/src/assets/sass/alpha/profile.scss
+++ b/src/assets/sass/alpha/profile.scss
@@ -7,6 +7,7 @@
     top: 0;
     transition: .5s;
     width: 100%;
+    z-index: 99;
     @include box-shadow(0 0 30px 10px #d8d8d8);
 
     &__title {
